tests/ui/consts/const_cmp_type_id.stderr
error[E0015]: cannot call non-const operator in constants
  --> $DIR/const_cmp_type_id.rs:10:18
   |
LL |         let _a = TypeId::of::<u8>() < TypeId::of::<u16>();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/any.rs:LL:COL
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
